# ChangeLog for x11-libs/qt-test
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-test/ChangeLog,v 1.98 2012/03/27 18:37:05 johu Exp $

  27 Mar 2012; Johannes Huber <johu@gentoo.org> -qt-test-4.6.2.ebuild:
  Drop Qt-4.6.2

  29 Jan 2012; Joseph Jezak <josejx@gentoo.org> qt-test-4.7.4.ebuild:
  Marked ppc ppc64 stable for bug #390963.

*qt-test-4.8.0 (29 Jan 2012)

  29 Jan 2012; Alex Alexander <wired@gentoo.org> +qt-test-4.8.0.ebuild,
  metadata.xml:
  version bump

  27 Dec 2011; Markus Meier <maekke@gentoo.org> qt-test-4.7.4.ebuild:
  x86 stable, bug #390963

  20 Dec 2011; Agostino Sarubbo <ago@gentoo.org> qt-test-4.7.4.ebuild:
  Stable for AMD64, wrt bug #390963

  28 Nov 2011; Davide Pesavento <pesa@gentoo.org> -files/qt-4.5-nolibx11.diff,
  -qt-test-4.7.3.ebuild:
  Remove Qt 4.7.3

  26 Nov 2011; Robin H. Johnson <robbat2@gentoo.org> Manifest:
  Bug 385719: upstream altered qt-everywhere-opensource-src-4.7.4.tar.gz, mass
  fix for pesa.

*qt-test-4.7.4 (08 Sep 2011)

  08 Sep 2011; Alex Alexander <wired@gentoo.org> +qt-test-4.7.4.ebuild:
  version bump, 4.7.4

  17 Aug 2011; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  qt-test-4.6.3.ebuild:
  keyword ~sparc-solaris

  13 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> qt-test-4.7.2.ebuild:
  ppc64 stable wrt #354033

  05 Jun 2011; Markus Meier <maekke@gentoo.org> qt-test-4.7.2.ebuild:
  arm stable, bug #354033

  01 Jun 2011; Brent Baude <ranger@gentoo.org> qt-test-4.7.2.ebuild:
  Marking qt-test-4.7.2 ppc stable for bug 354033

*qt-test-4.7.3 (10 May 2011)

  10 May 2011; Theo Chatzimichos <tampakrap@gentoo.org> +qt-test-4.7.3.ebuild:
  Version bump Qt 4.7.3

  09 May 2011; Markos Chandras <hwoarang@gentoo.org> qt-test-4.7.2.ebuild:
  Stable on amd64 wrt bug #354033

  09 May 2011; Thomas Kahle <tomka@gentoo.org> qt-test-4.7.2.ebuild:
  x86 stable per bug 354033
