@@ -1,6 +1,11 @@
 # ChangeLog for x11-libs/qt-test
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-test/ChangeLog,v 1.98 2012/03/27 18:37:05 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-test/ChangeLog,v 1.99 2012/03/29 22:17:03 pesa Exp $
+
+*qt-test-4.8.1 (29 Mar 2012)
+
+  29 Mar 2012; Davide Pesavento <pesa@gentoo.org> +qt-test-4.8.1.ebuild:
+  Version bump.
 
   27 Mar 2012; Johannes Huber <johu@gentoo.org> -qt-test-4.6.2.ebuild:
   Drop Qt-4.6.2
